# Dkurguzi

./: CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: cmake.yml
libs/DynamicLib/: CMakeLists.txt
libs/DynamicLib/src/: DynamicLib.cpp
libs/StaticLib/: CMakeLists.txt
libs/StaticLib/src/: StaticLib.cpp  StaticLib.h
src/MainProject/: CMakeLists.txt  MainProject.cpp
